<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.model.Info_ClienteFragment">

    <ImageView
        android:id="@+id/txtInfoCliente"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:src="@drawable/capa2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        android:contentDescription="@string/Item1Descri_img" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:cardCornerRadius="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInfoCliente">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/addNome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Input_Nome"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/addNome"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/estilo_border"
                android:inputType="text"
                android:hint="  Nome"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/addEmail_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Input_Email"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/addEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/estilo_border"
                android:inputType="text"
                android:hint="  E-mail"
                tools:ignore="TextFields" />

            <TextView
                android:id="@+id/addTel_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Input_Tele"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/addTel"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/estilo_border"
                android:inputType="text"
                android:hint="  Telefone" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_pro1_addOr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:layout_margin="10dp"
            android:text="@string/Botao_infoCliente"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_gravity="bottom"
            android:onClick="onButtonClick" />

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
