<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.model.Info_ProdutoFragment">

    <ImageView
        android:id="@+id/txtInfoProduto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:src="@drawable/capa2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        android:contentDescription="@string/Item1Descri_img" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        app:cardCornerRadius="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInfoProduto">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="8dp"
                android:maxLines="10"
                android:text="@string/Item1"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintVertical_bias="0"
                android:layout_marginBottom="8dp"
                android:gravity="center"/>

            <TextView
                android:id="@+id/Pro_descricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="8dp"
                android:maxLines="10"
                android:text="@string/Item1Descri_pro"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintVertical_bias="0"
                android:layout_marginBottom="8dp"
                android:gravity="center"/>
        </LinearLayout>


        <Button
            android:id="@+id/bt_pro1_addOr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:layout_margin="10dp"
            android:text="@string/Botao_addOc"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:layout_gravity="bottom"
            android:onClick="onButtonClick"/>
        </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>